--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.datasource.username=root
 # ================================
 #spring.jpa.show-sql = false
 
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 
-#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=none
 
 
 #spring.datasource.tomcat.max-wait=10000
